# steit

./: .gitignore  Cargo.toml  README.md  go.mod
steit/: Cargo.toml
steit-csharp/: .gitignore  Steit.csproj  omnisharp.json
steit-csharp-v2/: Steit.csproj
steit-csharp-v2/src/Builtins/: Bytes.cs
steit-csharp-v2/src/Codec/: ByteReader.cs  Reader.cs
steit-csharp-v2/src/Collections/: StateList.cs  StateMap.cs  Vector.cs
steit-csharp-v2/src/State/: FieldUpdateEventArgs.cs  IState.cs  LogEntry.cs  LogEntryV2.cs  Path.cs  State.cs  StateFactory.cs  StateReplayer.cs  Typing.cs  VariantUpdateEventArgs.cs
steit-csharp-v2/tests/: Action.cs  ActionsOr.cs  Attack.cs  Hello.cs  Hit.cs  Inner.cs  Multicase.cs  Outer.cs  Skill.cs  Sure.cs  Test.cs  Woof.cs
steit-csharp/src/: EnumState.cs  Path.cs  State.cs  Utilities.cs  Utils.cs
steit-csharp/src/Builtins/: ByteArray.cs  Bytes.cs  Maybe.cs  Option.cs
steit-csharp/tests/: Action.cs  ActionsOr.cs  Attack.cs  Hello.cs  Hit.cs  Inner.cs  Multicase.cs  OldAction.cs  OldHit.cs  Outer.cs  Skill.cs  Sure.cs  Test.cs  Woof.cs
steit-derive/: Cargo.toml
steit-derive/src/: attr.rs  context.rs  ctx.rs  derivation.rs  derive.rs  field.rs  impl.rs  impl_util.rs  impler.rs  lib.rs  str_util.rs  string_util.rs  struct.rs  util.rs
steit-derive/src/derive/: derive.rs  enum.rs  field.rs  mod.rs  struct.rs  union.rs  variant.rs
steit-derive/src/derive2/: attr.rs  ctx.rs  derive.rs  impl.rs  mod.rs  string.rs
steit-derive/src/derive2/derive/: enum.rs  field.rs  mod.rs  struct.rs  union.rs  variant.rs
steit-derive/src/derive2/impl/: enum.rs  mod.rs  union.rs  variant.rs
steit-derive/src/derive_v2/: derive.rs  enum.rs  field.rs  mod.rs  struct.rs  tag.rs  variant.rs
steit-derive/src/internal/: derive.rs  field.rs  mod.rs  struct.rs
steit-derive/test-crate/: Cargo.toml
steit-derive/test-crate/src/: legacy.rs  lib.rs
steit-go/: go.mod  main.go
steit-go/example/: hello.go  main.go
steit-go/origin/: action.go  action_message.go  binary_message.go  card_play_hint.go  vec_card_play_hint.go
steit-go/pkg/codec/: path.go  (+1 more)
steit/src/: de.rs  de2.rs  de_v2.rs  lib.rs  log.rs  merge.rs  path.rs  reader.rs  runtime.rs  ser.rs  ser2.rs  ser_v2.rs  state.rs  state2.rs  state_v2.rs  test_util.rs  test_util_v2.rs  test_utils.rs  varint.rs  wire_fmt.rs  wire_format.rs  wire_type.rs
steit/src/collections/: list.rs  mod.rs
steit/src/de/: de.rs  mod.rs  reader.rs
steit/src/de_v2/: de.rs  merge.rs  mod.rs  reader.rs
steit/src/impls/: array.rs  bool.rs  box.rs  hash_map.rs  macros.rs  mod.rs  option.rs  str.rs  string.rs  tuple.rs  varint.rs  vec.rs
steit/src/log/: entry.rs  entry_v2.rs  logger.rs  logger_v2.rs  mod.rs
steit/src/log/loggers/: buffer.rs  buffer_v2.rs  mod.rs  noop.rs  panic.rs  print.rs  replay.rs  writer.rs
steit/src/meta/: message.rs  meta.rs  mod.rs  msg.rs  name.rs  type.rs
steit/src/rt/: cached_size.rs  log.rs  logger.rs  logger_v2.rs  mod.rs  node.rs  path.rs  replay.rs  runtime.rs  runtime_v2.rs  runtimed.rs  size_cache.rs
steit/src/rt/log/: entry.rs  mod.rs
steit/src/runtime/: cached_size.rs  log.rs  log2.rs  mod.rs  node.rs  path.rs  path2.rs  runtime.rs  runtime2.rs  runtimed.rs
steit/src/types/: boolean.rs  bytes.rs  bytes_v2.rs  list.rs  macros.rs  maybe.rs  mod.rs  option.rs  packed.rs  type_utils.rs  varint.rs
steit/src/types/collections/: iter.rs  list.rs  map.rs  mod.rs
steit/src/types/collections/list/: enumerate.rs  iter.rs
steit/src/types/collections/map/: mod.rs
steit/src/types/impls/: bool.rs  boolean.rs  box.rs  boxed.rs  mod.rs  option.rs  packed.rs  rc.rs  vec.rs
steit/src/types/map/: iter.rs  key.rs  map.rs
steit/src/types/state/: list.rs  maybe.rs
steit/src/types/state/list/: iter.rs  list.rs  list_v2.rs  mod.rs
steit/src/types/state/map/: iter.rs  iter_v2.rs  key.rs  key_v2.rs  map.rs  map_v2.rs  mod.rs
steit/src/types/stateful/: mod.rs
steit/src/types/stateful/list/: enumerate.rs  list.rs  mod.rs
steit/src/types/stateful/map/: iter.rs  map.rs  mod.rs
steit/src/types/stateful/pointer/: mod.rs  pointer.rs
vector-state/: Cargo.toml
vector-state-derive/: Cargo.toml
vector-state-derive/src/: attr.rs  context.rs  field.rs  lib.rs  struct.rs  util.rs
vector-state-derive/test-crate/: Cargo.toml
vector-state-derive/test-suite/src/: lib.rs
vector-state/src/: de.rs  lib.rs  log.rs  path.rs  ser.rs  varint.rs
(+79 files in other folders)
