[package]
name = "vector-state-derive"
version = "0.1.0"
description = "Convenient state derivation."
authors = ["Sky Mavis Engineering <engineering@skymavis.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/skymavis/vector"
repository = "https://github.com/skymavis/vector"
categories = ["data-structures", "encoding", "game-engines"]
keywords = ["state", "serialization", "synchronization", "protobuf"]
include = ["src/**/*", "LICENSE", "README.md"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[badges]
travis-ci = { repository = "skymavis/vector", branch = "master" }
coveralls = { repository = "skymavis/vector", branch = "master" }
is-it-maintained-issue-resolution = { repository = "skymavis/vector" }
is-it-maintained-open-issues = { repository = "skymavis/vector" }
maintenance = { status = "actively-developed" }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.6"
quote = "1.0.2"
syn = "1.0.5"
